--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,4 +1,5 @@
 galaxy_info:
+  role_name: docker
   author: Eric Lehmann
   description: Updates docker containers using watchtower
 
@@ -13,7 +14,7 @@ galaxy_info:
   # - GPL-3.0-only
   # - Apache-2.0
   # - CC-BY-4.0
-  license: license (GPL-2.0-or-later, MIT, etc)
+  license: license (GPL-2.0-or-later)
 
   min_ansible_version: 2.1
 
