--- a/tasks/update_containers.yml
+++ b/tasks/update_containers.yml
@@ -1,5 +1,6 @@
+---
 - name: update Docker Containers
-  docker_container:
+  community.general.docker_container:
     name: watchtower
     image: containrrr/watchtower
     volumes: /var/run/docker.sock:/var/run/docker.sock
